core-plugins/src/test/resources/scraper/plugins/core/typechecker/fail/aggregate2.yf
---
name: aggregate-self
graphs:
  start:
    - {type: EchoNode, put: listi, value: []}
    - type: AggregateListNode
      aggregate: "firstelement"
      aggregateList: "{listi}"
      put: "list"

    - type: AggregateListNode
      aggregate: {hello: world}
      aggregateList: "{list}"
      put: "list2"


